[gd_scene load_steps=5 format=3 uid="uid://cnxxwkelwlkon"]

[ext_resource type="Theme" uid="uid://cgmjqqgr3bnmh" path="res://resources/styles/main_theme.tres" id="1_c6yhx"]
[ext_resource type="Script" path="res://scripts/main_screen.gd" id="1_i8eam"]

[sub_resource type="GDScript" id="GDScript_br3q5"]
resource_name = "LabelDate"
script/source = "extends Label


func _process(_delta):
	text = \"Текущая дата: \" + G.date
"

[sub_resource type="GDScript" id="GDScript_4rscl"]
resource_name = "Calculating"
script/source = "extends PanelContainer


var in_process: bool = false


func start():
	in_process = true
	while in_process and visible:
		$Label.text = \"Поиск затмений.\"
		$Timer.start(1)
		await $Timer.timeout
		if !in_process: return
		$Label.text = \"Поиск затмений..\"
		$Timer.start(1)
		await $Timer.timeout
		if !in_process: return
		$Label.text = \"Поиск затмений...\"
		$Timer.start(1)
		await $Timer.timeout
	in_process = false


func stop():
	in_process = false
	$Label.text = \"Затмений не найдено.\"
"

[node name="MainScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_c6yhx")
script = ExtResource("1_i8eam")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Autor" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "i"

[node name="Date" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SetDateButton" type="Button" parent="MarginContainer/Date"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_force_pass_scroll_events = false
theme = ExtResource("1_c6yhx")
text = "Установить дату"

[node name="Label" type="Label" parent="MarginContainer/Date"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_c6yhx")
text = "Текущая дата: 00-00-0000"
script = SubResource("GDScript_br3q5")

[node name="CalculateEclipseButton" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
mouse_force_pass_scroll_events = false
theme = ExtResource("1_c6yhx")
text = "Рассчитать затмение"

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = SubResource("GDScript_4rscl")

[node name="Label" type="Label" parent="MarginContainer/PanelContainer"]
layout_mode = 2
text = "Производится расчёт"

[node name="Timer" type="Timer" parent="MarginContainer/PanelContainer"]
one_shot = true

[connection signal="pressed" from="MarginContainer/Autor" to="." method="_on_autor_pressed"]
[connection signal="pressed" from="MarginContainer/Date/SetDateButton" to="." method="_on_set_date_button_pressed"]
[connection signal="pressed" from="MarginContainer/CalculateEclipseButton" to="." method="_on_calculate_eclipse_button_pressed"]
